--- a/hp/templates/base.html
+++ b/hp/templates/base.html
@@ -136,7 +136,7 @@
 <a target="_blank" href="https://support.takumen.com/hc/ja">FAQ</a>
 </li>
 <li>
-<a target="_blank" href="https://support.takumen.com/hc/ja/requests/new">お問合せ</a>
+<a target="_blank" href="{% url 'information' %}">お問合せ</a>
 </li>
 </ul>
 <div class='sp-none'>
@@ -273,7 +273,7 @@
 <a href="https://support.takumen.com/hc/ja">FAQ</a>
 </li>
 <li>
-<a href="https://support.takumen.com/hc/ja/requests/new">お問い合わせ</a>
+<a href="{% url 'information' %}">お問い合わせ</a>
 </li>
 </ul>
 <ul class='f-sns'>
